Fix jump to section bug

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@
 
 .hash-span {
   margin-top: -100px;
-  padding-bottom: 10%;
+  padding-bottom: 100px;
   display: block;
 }
 
